# entro-ai

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
Netlify/: .env.example  README.md  netlify.toml  package.json
Netlify/public/: dashboard.html  documentation.html  index.html  reports.html
calibration/: __init__.py  bert_calibrator.py  neuromorphic_calibrator.py  transformer_calibrator.py
case_studies/: __init__.py  claude_case_study.py  copilot_case_study.py  deepseek_case_study.py  gemini_case_study.py  gpt4_case_study.py  perplexity_case_study.py  run_all.py
dashboard/: __init__.py  app.py
dashboard/templates/: __init__.py  index.html
data/calibration/: .gitkeep
data/case_studies/: .gitkeep
data/validation/: .gitkeep
edt/: __init__.py  app.py  scheduler.py
edt/adapters/: __init__.py  vllm_adapter.py
entro_ai/: __init__.py  architecture.py  coherence.py  core.py  core_v2.py  distributed_edt.py  dynamics.py  edt_adaptive.py  edt_controller.py
paper/: ENTRO-AI_BEYOND_LLMs.md  ENTRO-AI_Research_Paper.docx
reports/: daily_report.py  generate_all_reports.sh
simulation/: __init__.py  engine.py
tests/: __init__.py  test_core.py
